[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/mission-info/mission_info.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Theme" id=2]
VScrollBar/styles/scroll = SubResource( 1 )

[node name="mission_info" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 1366.0
margin_bottom = 254.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 254.0
rect_min_size = Vector2( 20, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 1366.0
margin_bottom = 254.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="operation_name" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
margin_right = 1342.0
margin_bottom = 40.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 5
custom_fonts/font = ExtResource( 1 )
text = "Operation ..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="operation_description" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 1342.0
margin_bottom = 72.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 5
custom_fonts/font = ExtResource( 2 )
text = "..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer6" type="MarginContainer" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 1342.0
margin_bottom = 86.0
rect_min_size = Vector2( 0, 10 )

[node name="operation_season" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 1342.0
margin_bottom = 118.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 5
custom_fonts/font = ExtResource( 2 )
text = "..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="operation_reward" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 1342.0
margin_bottom = 150.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 5
custom_fonts/font = ExtResource( 2 )
text = "Max Reward : $250"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer5" type="MarginContainer" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 1342.0
margin_bottom = 254.0
rect_min_size = Vector2( 0, 100 )

[node name="status" type="Label" parent="."]
modulate = Color( 0, 1, 0.439216, 1 )
margin_top = 184.0
margin_right = 344.0
margin_bottom = 294.0
rect_rotation = -33.2194
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 5
custom_fonts/font = ExtResource( 4 )
text = "[Completed]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
